--- a/docs/2025.md
+++ b/docs/2025.md
@@ -8,13 +8,13 @@
 
 **解:** $X$ 可能的取值有 $2$, $3$, $4$.
 
-\[
+```math
     \begin{aligned}
         P(X = 2) &= \frac{C_1^1C_3^1}{C_5^3} = 0.3 \\ 
         P(X = 3) &= \frac{C_2^1C_2^1}{C_5^3} = 0.4 \\
         P(X = 4) &= \frac{C_1^1C_3^1}{C_5^3} = 0.3
     \end{aligned}
-\]
+```
 
 画出概率分布表:
 
