--- a/docs/2025.md
+++ b/docs/2025.md
@@ -2,6 +2,31 @@
 
 ## 202510
 
+### 20251012
+
+> 验收某种发电机组时, 规定需要进行多次启动, 要求连续启动成功 $2$ 次才能接收. 设各次启动试验的结果是相互独立的, 且各次启动试验成功的概率为 $p$, 以 $X$ 表示被接收之前需进行的启动试验的次数, 记 $X$ 的概率分布为 $P\left\{X = k\right\} = p_k$, $k = 2$, $3$, $\cdots$. 证明: 当 $k \geq 5$ 时,
+>
+> ```math
+> p_k = \left(1 - \sum_{i = 1}^{k - 3} p_i\right)(1 - p)p^2.
+> ```
+
+**解:** 当 $k \geq 5$ 时, $\{X = k\}$ 说明第 $k - 1$ 次和 $k$ 次启动成功, 且第 $k - 2$ 次启动失败, 这件事的概率是 $(1 - p)p^2$.
+
+$\{X > k - 3\}$ 表示前 $k - 3$ 次试验中没有连续成功启动 $2$ 次,
+
+<!-- #?# -->
+```math
+P\{X > k - 3\} = 1 - P\{X \leq k - 3\} = 1 - \sum_{i = 1}^{k - 3} p_i.
+```
+
+且每次启动试验相互独立, 所以
+
+```math
+p_k = \left(1 - \sum_{i = 1}^{k - 3} p_i\right)(1 - p)^2.
+```
+
+**<div align = "right">□</div>**
+
 ### 20251010
 
 > 从 $5$ 个数: $1$, $2$, $3$, $4$, $5$ 中任取 $3$ 个数, 再按从小到大排列, 设 $X$ 表示中间那个数, 求 $X$ 的概率分布.
@@ -10,9 +35,9 @@
 
 ```math
     \begin{aligned}
-        P(X = 2) &= \frac{C_1^1C_3^1}{C_5^3} = 0.3 \\ 
-        P(X = 3) &= \frac{C_2^1C_2^1}{C_5^3} = 0.4 \\
-        P(X = 4) &= \frac{C_1^1C_3^1}{C_5^3} = 0.3
+        &P(X = 2) = \frac{C_1^1C_3^1}{C_5^3} = 0.3 \\ 
+        &P(X = 3) = \frac{C_2^1C_2^1}{C_5^3} = 0.4 \\
+        &P(X = 4) = \frac{C_1^1C_3^1}{C_5^3} = 0.3
     \end{aligned}
 ```
 
@@ -24,5 +49,5 @@
 
 **<div align = "right">□</div>**
 
-1. 通过[组合](combinatorics.md#combination)的方法可以算出选取数字时总共的组合数 $C_5^3 = 10$.
+1. 通过[组合](combinatorics.md#组合)的方法可以算出选取数字时总共的组合数 $C_5^3 = 10$.
 2. $X$ 可能的取值有 $2$, $3$, $4$. 对于 $X$ 每一个可能的取值, 在小于 $X$ 的范围中和大于 $X$ 的范围中分别选取一个数字, 同样借助组合.
