--- a/docs/2025.md
+++ b/docs/2025.md
@@ -2,15 +2,63 @@
 
 ## 202510
 
+### 20251014
+
+> 设 $X$ 的分布函数是
+>
+> ```math
+> F(x) =
+> \begin{cases}
+>   0, &x \leq 0, \\
+>   Ax^2, &0 < x \leq 1, \\
+>   1, &x > 1.
+> \end{cases}
+> ```
+>
+> 求 $A$ 及 $P\{0.5 < X\leq 0.8\}$.
+
+**解:** $X$ 是随机变量, 其分布函数 $F(x)$ 在间断点处右连续, 即
+
+```math
+\begin{aligned}
+    \lim_{x \to 0^+} F(x) = F(0) \\
+    \lim_{x \to 1^+} F(x) = F(1)
+\end{aligned}
+```
+
+所以
+
+```math
+\begin{aligned}
+    \lim_{x \to 0^+} Ax^2 = 0 \\
+    \lim_{x \to 1^+} 1 = 1 = Ax^2 = A
+\end{aligned}
+```
+
+解得 $A = 1$.
+
+```math
+\begin{aligned}
+    & P\{0.5 < X \leq 0.8\} \\
+    = & F(0.8) - F(0.5) \\
+    = & 0.8^2 - 0.5^2 \\
+    = & 0.39
+\end{aligned}
+```
+
+**<div align = "right">□</div>**
+
+- 随机变量 $X$ 的分布函数 $F(x)$ 有[四条性质](properties_of_functions#随机变量--的分布函数--的性质-分布函数的充要条件). 这也是函数作为随机变量得分布函数的充要条件.
+
 ### 20251012
 
-> 验收某种发电机组时, 规定需要进行多次启动, 要求连续启动成功 $2$ 次才能接收. 设各次启动试验的结果是相互独立的, 且各次启动试验成功的概率为 $p$, 以 $X$ 表示被接收之前需进行的启动试验的次数, 记 $X$ 的概率分布为 $P\left\{X = k\right\} = p_k$, $k = 2$, $3$, $\cdots$. 证明: 当 $k \geq 5$ 时,
+> 验收某种发电机组时, 规定需要进行多次启动, 要求连续启动成功 $2$ 次才能接收. 设各次启动试验的结果是相互独立的, 且各次启动试验成功的概率为 $p$, 以 $X$ 表示被接收之前需进行的启动试验的次数, 记 $X$ 的概率分布为 $P\{X = k\} = p_k$, $k = 2$, $3$, $\cdots$. 证明: 当 $k \geq 5$ 时,
 >
 > ```math
 > p_k = \left(1 - \sum_{i = 1}^{k - 3} p_i\right)(1 - p)p^2.
 > ```
 
-**解:** 当 $k \geq 5$ 时, $\{X = k\}$ 说明第 $k - 1$ 次和 $k$ 次启动成功, 且第 $k - 2$ 次启动失败, 这件事的概率是 $(1 - p)p^2$.
+**证明:** 当 $k \geq 5$ 时, $\{X = k\}$ 说明第 $k - 1$ 次和 $k$ 次启动成功, 且第 $k - 2$ 次启动失败, 这件事的概率是 $(1 - p)p^2$.
 
 $\{X > k - 3\}$ 表示前 $k - 3$ 次试验中没有连续成功启动 $2$ 次,
 
@@ -19,7 +67,7 @@ $\{X > k - 3\}$ 表示前 $k - 3$ 次试验中没有连续成功启动 $2$ 次,
 P\{X > k - 3\} = 1 - P\{X \leq k - 3\} = 1 - \sum_{i = 1}^{k - 3} p_i.
 ```
 
-且每次启动试验相互独立, 所以
+且每次启动试验相互独立, 所以, 当 $k \geq 5$ 时,
 
 ```math
 p_k = \left(1 - \sum_{i = 1}^{k - 3} p_i\right)(1 - p)^2.
