--- a/docs/202510.md
+++ b/docs/202510.md
@@ -1,8 +1,44 @@
-# 2025
+# 202510
 
-## 202510
+## 20251015
 
-### 20251014
+> 有随机事件 $A$, $B$, 且 $P(A|B) > P(A)$. 证明 $P(\overline{A}|\overline{B}) > P(\overline{A})$.
+
+**证明:** 由全概率公式得
+
+```math
+P(A) = P(B)P(A|B) + P(\overline{B})P(A|\overline{B}).
+```
+
+```math
+\begin{aligned}
+    & P(\overline{A}|\overline{B}) \\
+    = & 1 - P(A|\overline{B}) \\
+    = & 1 - \frac{1}{P(\overline{B})}[p(A) - P(B)P(A|B)].
+\end{aligned}
+```
+
+因为 $P(A|B) > P(A)$, 所以
+
+```math
+\begin{aligned}
+    & P(\overline{A}|\overline{B}) \\
+    > & 1 - \frac{1}{P(\overline{B})}[p(A) - P(A)P(B)] \\
+    = & 1 - \frac{P(A)[1 - P(B)]}{1 - P(B)} \\
+    = & 1 - P(A) \\
+    = & P(\overline{A}),
+\end{aligned}
+```
+
+即
+
+```math
+P(\overline{A}|\overline{B}) > P(\overline{A}).
+```
+
+**<div align = "right">□</div>**
+
+## 20251014
 
 > 设 $X$ 的分布函数是
 >
@@ -50,7 +86,7 @@
 
 - 随机变量 $X$ 的分布函数 $F(x)$ 有[四条性质](properties_of_functions#随机变量--的分布函数--的性质-分布函数的充要条件). 这也是函数作为随机变量得分布函数的充要条件.
 
-### 20251012
+## 20251012
 
 > 验收某种发电机组时, 规定需要进行多次启动, 要求连续启动成功 $2$ 次才能接收. 设各次启动试验的结果是相互独立的, 且各次启动试验成功的概率为 $p$, 以 $X$ 表示被接收之前需进行的启动试验的次数, 记 $X$ 的概率分布为 $P\{X = k\} = p_k$, $k = 2$, $3$, $\cdots$. 证明: 当 $k \geq 5$ 时,
 >
@@ -75,7 +111,7 @@ p_k = \left(1 - \sum_{i = 1}^{k - 3} p_i\right)(1 - p)^2.
 
 **<div align = "right">□</div>**
 
-### 20251010
+## 20251010
 
 > 从 $5$ 个数: $1$, $2$, $3$, $4$, $5$ 中任取 $3$ 个数, 再按从小到大排列, 设 $X$ 表示中间那个数, 求 $X$ 的概率分布.
 
