--- a/docs/202510.md
+++ b/docs/202510.md
@@ -1,5 +1,39 @@
 # 202510
 
+## 20251018
+
+> 有事件 $A$, $B$, $C$. $A$ 与 $B$ 相互独立, $B$ 与 $C$ 相互独立, $A$ 与 $C$ 互不相容. 已知 $P(A) = P(C) = 1 / 4$, $P(B) = 1 / 2$. 求在 $A$, $B$, $C$ 至少一个发生的条件下, $A$, $B$, $C$ 恰好有一个发生的概率.
+
+**解:** 设 "在 $A$, $B$, $C$ 至少一个发生" 为事件 $D$, "$A$, $B$, $C$ 恰好有一个发生" 为事件 $E$. 已知 $E \subset D$, 所以
+
+```math
+P(E|D) = \frac{P(E)}{P(D)} = \frac{P(A + B + C) - P(AB + BC + AC)}{P(A + B + C)}
+```
+
+```math
+\begin{aligned}
+    & P(A + B + C) \\
+    = & P(A) + P(B) + P(C) - P(AB) - P(BC) - P(AC) + P(ABC) \\
+    = & 1/4 + 1/2 + 1/4 - 1/8 - 1/8 - 0 + 0 \\
+    = & 3/4 \\[1em]
+
+    & P(AB + BC + AC) \\
+    = & P(AB) + P(BC) + P(AC) - 3P(ABC) + P(ABC) \\
+    = & 1/8 + 1/8 + 0 - 0 + 0 \\
+    = & 1/4
+\end{aligned}
+```
+
+所以
+
+```math
+P(E|D) = \frac{3/4 - 1/4}{3/4} = \frac{2}{3}
+```
+
+在 $A$, $B$, $C$ 至少一个发生的条件下, $A$, $B$, $C$ 恰好有一个发生的概率是 $2/3$.
+
+**<div align = "right">□</div>**
+
 ## 20251015
 
 > 有随机事件 $A$, $B$, 且 $P(A|B) > P(A)$. 证明 $P(\overline{A}|\overline{B}) > P(\overline{A})$.
@@ -84,7 +118,7 @@ P(\overline{A}|\overline{B}) > P(\overline{A}).
 
 **<div align = "right">□</div>**
 
-- 随机变量 $X$ 的分布函数 $F(x)$ 有[四条性质](properties_of_functions#随机变量--的分布函数--的性质-分布函数的充要条件). 这也是函数作为随机变量得分布函数的充要条件.
+- 随机变量 $X$ 的分布函数 $F(x)$ 有[四条性质](properties_of_functions.md#随机变量的分布函数的性质). 这也是函数作为随机变量得分布函数的充要条件.
 
 ## 20251012
 
