--- a/docs/202510.md
+++ b/docs/202510.md
@@ -1,5 +1,9 @@
 # 202510
 
+## 20251019
+
+> 设随机变量 $X$ 的数学期望 $EX$ 和方差 $DX$ 都存在, 且 $DX \neq 0$. 证明对于随机变量 $Y = \frac{X - EX}{\sqrt{DX}}$, 有 $EY = 0$, $DY = 1$.
+
 ## 20251018
 
 > 有事件 $A$, $B$, $C$. $A$ 与 $B$ 相互独立, $B$ 与 $C$ 相互独立, $A$ 与 $C$ 互不相容. 已知 $P(A) = P(C) = 1 / 4$, $P(B) = 1 / 2$. 求在 $A$, $B$, $C$ 至少一个发生的条件下, $A$, $B$, $C$ 恰好有一个发生的概率.
