docs: 新增概率论-常用的连续型分布

--- a/waitings/概率论.md
+++ b/waitings/概率论.md
@@ -1,5 +1,128 @@
 # 概率论与数理统计
 
+## 常用的连续性分布
+
+- 密度函数
+- 期望, 方差
+- 特殊性质
+- 大致图像
+
+### 均匀分布
+
+```math
+f(x) =
+\begin{cases}
+    \frac{1}{b - a}, & a \leq x \leq b, \\
+    0, & else,
+\end{cases}
+```
+
+```math
+\begin{aligned}
+    EX = \frac{a + b}{2}, \\
+    DX = \frac{(b - a)^2}{12}.
+\end{aligned}
+```
+
+### 指数分布
+
+$X \sim e(\lambda)$
+
+```math
+f(x) =
+\begin{cases}
+    \lambda e^{-\lambda x}, & x \geq 0, \\
+    0, & x < 0,
+\end{cases}
+```
+
+```math
+\begin{aligned}
+    EX = \frac{1}{\lambda}, \\
+    DX = \frac{1}{\lambda^2}.
+\end{aligned}
+```
+
+> **定理 (无记忆性)** 指数分布满足 (指数分布的充要条件):
+>
+> ```math
+> P\{X > a + b | X > a\} = P\{X > b\},\quad a > 0, b > 0
+> ```
+
+**证明** 等号右边:
+
+```math
+\begin{aligned}
+    & P\{X > b\} \\
+    = & 1 - P\{X \leq b\} \\
+    = & 1 - F(b) \\
+    = & 1 - (1 - e^{-\lambda b}) \\
+    = & e^{-\lambda b}
+\end{aligned}
+```
+
+等号左边:
+
+```math
+\begin{aligned}
+    & P\{X > a + b | X > a\} \\
+    = & \frac{P\{X > a + b \text{且} X > a\}}{P\{X > a\}} \\
+    = & \frac{P\{X > a + b\}}{P\{X > a\}} \\
+    = & \frac{e^{-\lambda(a + b)}}{e^{-\lambda a}} \\
+    = & e^{-\lambda b}
+\end{aligned}
+```
+
+**<div align = "right">□</div>**
+
+### 正态分布
+
+$X\sim N(\mu, \sigma^2)$
+
+```math
+\phi(x) = \frac{1}{\sqrt{2\pi\sigma}}e^{-\frac{(x - \mu)^2}{2\sigma^2}}
+```
+
+```math
+\begin{aligned}
+    EX = \mu, \\
+    DX = \sigma^2. \\
+    \phi(\mu) = \frac{1}{\sqrt{2\pi}\sigma}
+\end{aligned}
+```
+
+标准正态分布: $X\sim N(0, 1)$
+
+```math
+\phi_0(x) = \frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}{2}}
+```
+
+```math
+\begin{aligned}
+    \phi_0(0) = \frac{1}{2}, \\
+    \phi_0(-x) = 1 - \phi_0(x).
+\end{aligned}
+```
+
+> **定理** 设 $X\sim N(\mu, \sigma^2)$, $Y = aX + b$, $a$, $b$ 是常数, 且 $a \neq 0$, 则
+>
+> ```math
+> Y\sim N(a\mu + b, a^2\sigma^2)
+> ```
+
+> **定理 $X$ 的标准化** 则 $X\sim N(\mu, \sigma^2)$, 则 $Z = \frac{X - \mu}{\sigma} \sim N(0, 1)$.
+
+> **定理** $Z$ 的存在是 $X\sim N(\mu, \sigma^2)$ 的充要条件
+
+> **定理** 设 $X\sim N(\mu, \sigma^2)$, 则有
+>
+> ```math
+> \begin{aligned}
+>     \Phi(x) = \Phi_0\left(\frac{x - \mu}{\sigma}\right), \\
+>     \phi(x) = \frac{1}{\sigma}\phi_0\left(\frac{x - \mu}{\sigma}\right).
+> \end{aligned}
+> ```
+
 ## 常用的离散型分布
 
 ### 退化分布
