docs: 新增概率论-常用的连续型分布

--- a/waitings/概率论.md
+++ b/waitings/概率论.md
@@ -1,6 +1,6 @@
 # 概率论与数理统计
 
-## 常用的连续性分布
+## 常用的连续型分布
 
 - 密度函数
 - 期望, 方差
@@ -8,6 +8,8 @@
 - 大致图像
 
 ### 均匀分布
+
+$X\sim U[a, b]$
 
 ```math
 f(x) =
