docs: 新增微积分-变限积分求导公式

--- a/waitings/微积分.md
+++ b/waitings/微积分.md
@@ -1,5 +1,16 @@
 # 微积分
 
+## 变限积分求导
+
+如果 $f(x)$ 连续, $g(x)$ 和 $h(x)$ 可到, 那么 $F(x) = \int_{g(x)}^{h(x)}f(t)\mathrm{d}t$ 的导数:
+
+```math
+\begin{aligned}
+    F'(x) &= \frac{\mathrm{d}}{\mathrm{d}x}\int_{g(x)}^{h(x)}f(t)\mathrm{d}t \\
+    &= f[h(x)]h'(x) - f[g(x)]g'(x)
+\end{aligned}
+```
+
 ## 基本积分表
 
 ```math
