--- a/waitings/概率论.md
+++ b/waitings/概率论.md
@@ -15,7 +15,7 @@ $X\sim U[a, b]$
 f(x) =
 \begin{cases}
     \frac{1}{b - a}, & a \leq x \leq b, \\
-    0, & else,
+    0, & \text{else},
 \end{cases}
 ```
 
